[gd_scene load_steps=2 format=3 uid="uid://dho0wp72kgydc"]

[ext_resource type="Script" path="res://Scripts/ComponentScripts/DialogueArea.gd" id="1_vbgax"]

[node name="DialogueArea" type="Area3D" node_paths=PackedStringArray("dialogue_box")]
script = ExtResource("1_vbgax")
dialogue_box = NodePath("DialogueBox")

[node name="DialogueBox" type="Sprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 3, 0)
visible = false
billboard = 1
texture_filter = 0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
